avoid image jump when dropping it

--- a/Resources/public/css/halloLiipStyle.css
+++ b/Resources/public/css/halloLiipStyle.css
@@ -18,6 +18,7 @@
 
 [contenteditable="false"]:hover, [contenteditable="false"]{
     border: none;
+    padding: 0;
 }
 
 [contenteditable] p{
